fix avatar dslwind/blog@f9005c0c9c38c8930ad04eb05e1f99e4eb0bea0c

--- a/2018-06-18-twos-complement/index.html
+++ b/2018-06-18-twos-complement/index.html
@@ -122,7 +122,7 @@
         <div class="site-overview-wrap sidebar-panel">
           <div class="site-author animated" itemprop="author" itemscope itemtype="http://schema.org/Person">
     <img class="site-author-image" itemprop="image" alt="dslwind"
-      src="https://tvax2.sinaimg.cn/large/7fa1e0d7ly1ff52f888f4j20md0mbwh0.jpg">
+      src="https://cdn.jsdelivr.net/gh/dslwind/CDN/images/avatar.jpg">
   <p class="site-author-name" itemprop="name">dslwind</p>
   <div class="site-description" itemprop="description"></div>
 </div>
@@ -171,7 +171,7 @@
     <link itemprop="mainEntityOfPage" href="https://dslwind.github.io/2018-06-18-twos-complement/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="https://tvax2.sinaimg.cn/large/7fa1e0d7ly1ff52f888f4j20md0mbwh0.jpg">
+      <meta itemprop="image" content="https://cdn.jsdelivr.net/gh/dslwind/CDN/images/avatar.jpg">
       <meta itemprop="name" content="dslwind">
     </span>
 
