--- a/2021-04-20-github-action-hexo/index.html
+++ b/2021-04-20-github-action-hexo/index.html
@@ -121,7 +121,7 @@
         <div class="site-overview-wrap sidebar-panel">
           <div class="site-author animated" itemprop="author" itemscope itemtype="http://schema.org/Person">
     <img class="site-author-image" itemprop="image" alt="dslwind"
-      src="https://tvax2.sinaimg.cn/large/7fa1e0d7ly1ff52f888f4j20md0mbwh0.jpg">
+      src="https://cdn.jsdelivr.net/gh/dslwind/CDN/images/avatar.jpg">
   <p class="site-author-name" itemprop="name">dslwind</p>
   <div class="site-description" itemprop="description"></div>
 </div>
@@ -170,7 +170,7 @@
     <link itemprop="mainEntityOfPage" href="https://dslwind.github.io/2021-04-20-github-action-hexo/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="https://tvax2.sinaimg.cn/large/7fa1e0d7ly1ff52f888f4j20md0mbwh0.jpg">
+      <meta itemprop="image" content="https://cdn.jsdelivr.net/gh/dslwind/CDN/images/avatar.jpg">
       <meta itemprop="name" content="dslwind">
     </span>
 
